--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,8 @@
 
   <body>
     <nav>
-      <%= link_to "Requests", requests_path %> <%= link_to "Sitters", users_path %> <%= link_to "Login", new_session_path %> <%= link_to "Sign Up", new_user_path %>
+      <%= link_to "Requests", requests_path %> <%= link_to "Sitters", users_path %>
+      <%= link_to "Login", new_session_path %> <%= link_to "Sign Up", new_user_path %>
     </nav>
     <%= yield %>
   </body>
