--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,3 +1,20 @@
-<h2>Look at this <%= @user.name %> </h2>
+<h2>Look at this plant parent</h2>
+<h3> <%= @user.name %>   </h3>
+<p> <%= @user.bio %>    </p>
+
+<ul>
+  <% @user.plants.each do |plant| %>
+  <li> <%= plant.species %> <br> <%= image_tag(plant.img) %> </li>
+  <% end %>
+</ul>
+
+
+
+
+
+
+
+<% if @logged_in_user == @user %>
 <%= button_to "Edit Profile", edit_user_path(@user), method: :get %><br/>
 <%= button_to "Delete Account", user_path, method: :delete %>
+<% end %>
