--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,4 +11,213 @@
  * It is generally better to create a new file per style scope.
  *
  */
-// @import 'bootstrap'
+
+ nav {
+   display: inline-block;
+   float: right;
+   width: 100%;
+/*We're just setting up fonts settings here*/
+   font-family: sans-serif;
+   font-size: 9px;
+   color: white;
+/*Box Method Test AKA handicap*/
+   background-color: #9DC183;
+
+  /*Padding Our Box*/
+   padding-top: 20px;
+   padding-right: 10px;
+   padding-bottom: 20px;
+   padding-left: 10px;
+
+   text-decoration: none;
+   text-align: right;
+
+   word-spacing: 10px;
+   margin-top: -15px;
+   margin-bottom: 20px;
+}
+
+nav a {
+  font-size: 1.7em;
+  color: white;
+  text-decoration: none;
+}
+
+nav a:hover, a:active {
+  color: #654321;
+}
+.form-field {
+
+   border: 0px solid #c9b7a2;
+   background: #ffffff;
+   -webkit-border-radius: 0px;
+   -moz-border-radius: 0px;
+   border-radius: 0px;
+   color: #000000;
+   -webkit-box-shadow: rgba(255,255,255,0.4) 0 1px 0, inset rgba(000,000,000,0.7) 0 0px 0px;
+   -moz-box-shadow: rgba(255,255,255,0.4) 0 1px 0, inset rgba(000,000,000,0.7) 0 0px 0px;
+   box-shadow: rgba(255,255,255,0.4) 0 1px 0, inset rgba(000,000,000,0.7) 0 0px 0px;
+   padding:8px;
+   margin-bottom:20px;
+   width:280px;
+   }
+.form-field:focus {
+   background: #fff;
+   color: #000000;
+   }
+.form-container h2 {
+   text-shadow: #9dc183 0 1px 0;
+   font-size:18px;
+   margin: 0 0 10px 0;
+   font-weight:bold;
+   text-align:center;
+    }
+.form-title {
+   margin-bottom:10px;
+   color: #ffffff;
+   text-shadow: #9dc183 0 1px 0;
+   }
+.submit-container {
+   margin:8px 0;
+   text-align:right;
+   }
+.submit-button {
+   border: 0px solid #437314;
+   background: #437314;
+   background: -webkit-gradient(linear, left top, left bottom, from(#437314), to(#437314));
+   background: -webkit-linear-gradient(top, #437314, #437314);
+   background: -moz-linear-gradient(top, #437314, #437314);
+   background: -ms-linear-gradient(top, #437314, #437314);
+   background: -o-linear-gradient(top, #437314, #437314);
+   background-image: -ms-linear-gradient(top, #437314 0%, #437314 100%);
+   -webkit-border-radius: 0px;
+   -moz-border-radius: 0px;
+   border-radius: 0px;
+   -webkit-box-shadow: rgba(255,255,255,0.4) 0 0px 0, inset rgba(255,255,255,0.4) 0 0px 0;
+   -moz-box-shadow: rgba(255,255,255,0.4) 0 0px 0, inset rgba(255,255,255,0.4) 0 0px 0;
+   box-shadow: rgba(255,255,255,0.4) 0 0px 0, inset rgba(255,255,255,0.4) 0 0px 0;
+   text-shadow: #addc7e 0 1px 0;
+   color: #ffffff;
+   font-family: helvetica, serif;
+   padding: 8.5px 18px;
+   font-size: 14px;
+   text-decoration: none;
+   vertical-align: middle;
+   }
+.submit-button:hover {
+   border: 0px solid #447314;
+   text-shadow: #31540c 0 1px 0;
+   background: #6aa436;
+   background: -webkit-gradient(linear, left top, left bottom, from(#8dc059), to(#6aa436));
+   background: -webkit-linear-gradient(top, #8dc059, #6aa436);
+   background: -moz-linear-gradient(top, #8dc059, #6aa436);
+   background: -ms-linear-gradient(top, #8dc059, #6aa436);
+   background: -o-linear-gradient(top, #8dc059, #6aa436);
+   background-image: -ms-linear-gradient(top, #8dc059 0%, #6aa436 100%);
+   color: #fff;
+   }
+.submit-button:active {
+   text-shadow: #31540c 0 1px 0;
+   border: 0px solid #447314;
+   background: #8dc059;
+   background: -webkit-gradient(linear, left top, left bottom, from(#6aa436), to(#6aa436));
+   background: -webkit-linear-gradient(top, #6aa436, #8dc059);
+   background: -moz-linear-gradient(top, #6aa436, #8dc059);
+   background: -ms-linear-gradient(top, #6aa436, #8dc059);
+   background: -o-linear-gradient(top, #6aa436, #8dc059);
+   background-image: -ms-linear-gradient(top, #6aa436 0%, #8dc059 100%);
+   color: #fff;
+   }
+   .form-container {
+     opacity: 0.8;
+     border: 0px solid #f2e3d2;
+     background: #9dc183;
+     background: -webkit-gradient(linear, left top, left bottom, from(#9dc183), to(#9dc183));
+     background: -webkit-linear-gradient(top, #9dc183, #9dc183);
+     background: -moz-linear-gradient(top, #9dc183, #9dc183);
+     background: -ms-linear-gradient(top, #9dc183, #9dc183);
+     background: -o-linear-gradient(top, #9dc183, #9dc183);
+     background-image: -ms-linear-gradient(top, #9dc183 0%, #9dc183 100%);
+     -webkit-border-radius: 0px;
+     -moz-border-radius: 0px;
+     border-radius: 0px;
+     -webkit-box-shadow: rgba(000,000,000,0.9) 0 0px 2px, inset rgba(255,255,255,0.4) 0 0px 0;
+     -moz-box-shadow: rgba(000,000,000,0.9) 0 0px 2px, inset rgba(255,255,255,0.4) 0 0px 0;
+     box-shadow: rgba(000,000,000,0.9) 0 0px 2px, inset rgba(255,255,255,0.4) 0 0px 0;
+     font-family: 'Helvetica Neue',Helvetica,sans-serif;
+     text-decoration: none;
+     vertical-align: middle;
+     min-width:300px;
+     padding:20px;
+     width:300px;
+   }
+
+   #login {
+     position: absolute;
+    top: 50%;
+    left: 25%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+   }
+
+   img {
+     max-width: 100%;
+     height: auto;
+   }
+
+
+    *  {
+     font-family: sans-serif
+   }
+
+   ul {
+     position: inline-block;
+     list-style-type: none;
+   }
+
+   .centered {
+     text-align: center
+   }
+
+   .column {
+  float: left;
+  width: 33%;
+  padding: 1px;
+  text-align: center
+}
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+body, html {
+  height: 100%;
+}
+
+#main {
+  padding-right: 50px;
+  padding-left: 50px;
+  padding-bottom: 50px;
+}
+
+.bg {
+  /* The image used */
+  background-image: url("/assets/terrarium.jpg");
+
+  /* Full height */
+  height: 100%;
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.right {
+  position: absolute;
+ top: 110px;
+ right: 0%;
+ margin-left: -50%;
+ transform: translate(-50%, -50%);
+}
