--- a/app/views/requests/show.erb
+++ b/app/views/requests/show.erb
@@ -1,27 +1,27 @@
+<p></p>
 <h2>Request: <%= @request.title %></h2>
-<h3>I'll pay you $<%= @request.price %></h3>
+<h4>I'll pay you $<%= @request.price %></h4>
 <p> <%= @request.details %> </p>
-Plants you need to take care of:
-<ul>
-  <% @request.owner.plants.each do |plant| %>
-    <li> <%= plant.species %> <br> <%= image_tag(plant.img) %> </li>
-  <% end %>
-</ul>
+<span>Plants you need to take care of:</span> <br>
+<div class="row">
+  <br><% @request.owner.plants.each do |plant| %>
+     <div class = 'column'><%= image_tag(plant.img) %> <br> <%= plant.species %></div>
+   <% end %>
+</div>
 
-
-<%= @request.owner.name %><br>
-CONTACT INFO <br>
+<h4>Contact Info </h4>
+Username: <%= link_to @request.owner.name, user_path(@request.owner) %><br>
 Phone Number: <%= @request.owner.phone %> <br>
 Email: <%= @request.owner.email %><br>
-Zip Code: <%= @request.owner.zip %>
+Zip Code: <%= @request.owner.zip %><br>
   <% if @request.owner == @logged_in_user %>
-    <%= button_to "Edit Request", edit_request_path(@request), method: :get %><br/>
-    <%= button_to "Delete Request", request_path, method: :delete %>
+    <br><%= button_to "Edit Request", edit_request_path(@request), method: :get, class: 'submit-button' %><br/>
+    <%= button_to "Delete Request", request_path, method: :delete, class: 'submit-button' %>
   <% elsif @request.sitter == nil %>
     <%= form_for @request do |f| %>
       <%= f.hidden_field :sitter_id, :value=> session[:user_id] %>
-      <%= f.submit "Claim"%>
+      <%= f.submit "Claim", class: 'submit-button'%>
     <% end %>
   <% elsif @request.sitter == @logged_in_user %> <br>
-    You have claimed this request
+    <p>You have claimed this request!</p>
   <% end %>
