--- a/app/views/users/_form.erb
+++ b/app/views/users/_form.erb
@@ -1,25 +1,25 @@
-<%= form_for @user do |f| %>
-  <%= f.label :username %>
-  <%= f.text_field :username %><br/>
+<%= form_for @user, html: {class: 'form-container'} do |f| %>
+  <%= f.label :username, class: 'form-title' %>
+  <%= f.text_field :username, class: 'form-field' %><br/>
 
-  <%= f.label :password %>
-  <%= f.password_field :password %><br/>
+  <%= f.label :password , class: 'form-title' %>
+  <%= f.password_field :password , class: 'form-field' %><br/>
 
-  <%= f.label :name %>
-  <%= f.text_field :name %><br/>
+  <%= f.label :name , class: 'form-title' %>
+  <%= f.text_field :name , class: 'form-field'  %><br/>
 
-  <%= f.label :phone %>
-  <%= f.text_field :phone %><br/>
+  <%= f.label :phone , class: 'form-title' %>
+  <%= f.text_field :phone , class: 'form-field'  %><br/>
 
-  <%= f.label :email %>
-  <%= f.text_field :email %><br/>
+  <%= f.label :email , class: 'form-title' %>
+  <%= f.text_field :email , class: 'form-field'  %><br/>
 
-  <%= f.label :zip %>
-  <%= f.text_field :zip %><br/>
+  <%= f.label :zip, class: 'form-title'%>
+  <%= f.text_field :zip , class: 'form-field' %><br/>
 
-  <%= f.label :bio %>
-  <%= f.text_area :bio %><br/>
+  <%= f.label :bio, class: 'form-title' %>
+  <%= f.text_area :bio , class: 'form-field' %><br/>
   <br>
 
-  <%= f.submit %>
+  <%= f.submit class: 'submit-button' %>
 <% end %>
