--- a/app/views/users/edit.erb
+++ b/app/views/users/edit.erb
@@ -1,3 +1,4 @@
+<p></p>
 <h2>Edit Profile</h2>
 
 
@@ -12,10 +13,13 @@
 
 <%= render "form" %>
 
+<div class="right">
 
-Add a plant!
+<h2>Add a plant to your collection!</h2>
 <%= form_for @join do |f| %>
   <%= f.collection_select(:plant_id, @plants, :id, :species) %>
   <%= f.hidden_field :user_id, :value=> session[:user_id]  %>
-  <%= f.submit "I own this fuckin plant" %>
+  <%= f.submit "I own this fuckin plant", class: 'submit-button' %>
 <% end %>
+
+</div>
