--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -1,5 +1,8 @@
 <p></p>
-<h2>Sign Up</h2>
+<div class="fullscreen-bg">
+  <iframe https://youtu.be/MgDZBqTuUuE?t=14 src="https://www.youtube.com/embed/MgDZBqTuUuE?start=14&controls=0&showinfo=0&rel=0&autoplay=1&loop=1&mute=1&playlist=MgDZBqTuUuE" frameborder="0" width="100%" height="auto" position="relative" class="fullscreen-bg__video"></iframe>
+</div>
+<h2 style="color:white">Sign Up</h2>
 
 <ul>
 <% if flash[:error] %>
